Adding table component

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,4 @@
 <div class="content">
-  <p>Contenido Próximamente</p>
+  <p>Departamentos Disponibles</p>
+  <app-grid style="display: flex; justify-content: center"></app-grid>
 </div>
