--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -11,5 +11,6 @@
         <td>{{depa.city}}</td>
         <td>{{depa.currency}}</td>
         <td>{{depa.available}}</td>
+        <td>{{depa.moveDate | date }}</td>
     </tr>
 </table>
