--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,4 +1,5 @@
 
+<div>
 <table>
     <tr>
         <th *ngFor="let columns of displayedColumns">{{columns}}</th>
@@ -14,3 +15,4 @@
         <td>{{depa.moveDate | date }}</td>
     </tr>
 </table>
+</div>
